syntax = "proto3";
package stream;

service Stream {
  rpc publish(PublishRequest) returns (PublishResponse) {}
  rpc ServerStream(StreamRequest) returns (stream StreamResponse) {}
}

message PublishRequest {
  string message = 1;
}

message PublishResponse {
  string status = 1;
}

message StreamRequest {
  string message = 1;
}

message StreamResponse {
  string message = 1;
}
